landing page top javascript section and modification of classes

--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@
 
                     <div class="landing-currency-language-container">
                         <div class="landing-currency">
-                            <div class="use-choice currency">
+                            <div class="use-choice" id="currency">
                                 Currency <span>:</span> USD
                                 <span><i class="fa fa-angle-down"></i></span>
                             </div>
-                            <ul>
+                            <ul id="currency-content">
                                 <li><a href="">€ Euro</a></li>
                                 <li><a href="">£ Pound Sterling</a></li>
                                 <li><a href="">$ US Dollar</a></li>
                             </ul>
                         </div>
                         <div class="landing-currency ed">
-                            <div class="use-choice Language">
+                            <div class="use-choice" id="language">
                                 Language <span>:</span> EN-GB
                                 <span><i class="fa fa-angle-down"></i></span>
                             </div>
-                            <ul>
+                            <ul id="language-content">
                                 <li><a href="">english</a></li>
                                 <li><a href="">hindi</a></li>
                                 <li><a href="">france</a></li>
@@ -47,5 +47,8 @@
                 </div>
             </div>
         </section>
+
+
+        <script src="/scripts/home_script.js"></script>
     </body>
 </html>
