nav bar with products and responsive

--- a/index.html
+++ b/index.html
@@ -46,6 +46,181 @@
                     </div>
                 </div>
             </div>
+
+
+            <div class="logo-search-link-container">
+                <div class="logo-search-container">
+                    <div class="logo">
+                        <img src="/logos/logo_football.png" alt="">
+                        <div class="navicon">
+                            <i class="fa fa-navicon"></i>
+                        </div>
+                    </div>
+
+                    <div class="search-nav-container">
+                        <div class="search">
+                            <div class="input">
+                                <input type="text" placeholder="Search...">
+                            </div>
+                            <div class="search-icon">
+                                <i class="fa fa-search"></i>
+                            </div>
+                        </div>
+                        <div class="market-container">
+                            <div class="market">
+                                <i class="fa fa-user"></i>
+                            </div>
+
+                            <div class="shopping-container">
+                                <div class="content-item">
+                                    <div class="item-text-container">
+                                        <div class="item">
+                                            <a href="">
+                                                <img src="/images/product1.png" alt="">
+                                            </a>
+                                        </div>
+                                        <div class="item-text">
+                                            <p class="shirt">
+                                                <a href="">T-shirt</a> 
+                                            </p>
+                                            <p>
+                                                1x$45.00
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <div class="item-close">
+                                        <i class="fa fa-times"></i>
+                                    </div>
+                                </div>
+
+                                <div class="content-item ed">
+                                    <div class="item-text-container">
+                                        <div class="item">
+                                            <a href="">
+                                                <img src="/images/product2.png" alt="">
+                                            </a>
+                                        </div>
+                                        <div class="item-text">
+                                            <p class="shirt">
+                                                <a href="">Shores</a> 
+                                            </p>
+                                            <p>
+                                                1x$40.00
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <div class="item-close">
+                                        <i class="fa fa-times"></i>
+                                    </div>
+                                </div>
+
+                                <div class="main-product-price-container">
+                                    <div class="product-price-container">
+                                        <div class="product">
+                                            <p>
+                                                sub-total
+                                            </p>
+                                        </div>
+                                        <div class="price">
+                                            <p>
+                                                $85.00
+                                            </p>
+                                        </div>
+                                    </div>
+
+                                    <div class="product-price-container">
+                                        <div class="product">
+                                            <p>
+                                                Eco Tax (-2.00)
+                                            </p>
+                                        </div>
+                                        <div class="price">
+                                            <p>
+                                                $2.00
+                                            </p>
+                                        </div>
+                                    </div>
+
+                                    <div class="product-price-container">
+                                        <div class="product">
+                                            <p>
+                                                VAT (20%)
+                                            </p>
+                                        </div>
+                                        <div class="price">
+                                            <p>
+                                                $83.00
+                                            </p>
+                                        </div>
+                                    </div>
+
+                                    <div class="product-price-container">
+                                        <div class="product">
+                                            <p>
+                                                Total
+                                            </p>
+                                        </div>
+                                        <div class="price ed">
+                                            <p>
+                                                $85.00
+                                            </p>
+                                        </div>
+                                    </div>
+
+                                    <div class="item-btns">
+                                        <div class="main-item-btn">
+                                            <a href="">view cart</a>
+                                        </div>
+                                        <div class="main-item-btn">
+                                            <a href="">checkout</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+                <ul id="nav-link">
+                    <li><a href="">home</a></li>
+                    <li><a href="">matches <i class="fa fa-angle-down"></i></a>
+                        <div id="sub-menu">
+                            <ul>
+                                <li><a href="">matches</a></li>
+                                <li><a href="">recently winners <i class="fa fa-angle-down"></i></a>
+                                    <div id="sub-menu" class="fix-margin">
+                                        <ul>
+                                            <li><a href="">buy tickets</a></li>
+                                            <li><a href="">postponed match</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li><a href="">match details</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li><a href="">shop</a></li>
+                    <li><a href="">schedule</a></li>
+                    <li><a href="">blog</a></li>
+                    <li><a href="">players <i class="fa fa-angle-down"></i></a>
+                        <div id="sub-menu">
+                            <ul>
+                                <li><a href="">players</a></li>
+                                <li><a href="">top players <i class="fa fa-angle-down"></i></a>
+                                    <div id="sub-menu" class="fix-margin">
+                                        <ul>
+                                            <li><a href="">players history</a></li>
+                                            <li><a href="">postponed match</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li><a href="">players-details</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li><a href="">contact</a></li>
+                </ul>
+            </div>
         </section>
 
 
