nav bar with products, responsive and javascript functionnality

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 
                 <ul id="nav-link">
                     <li><a href="">home</a></li>
-                    <li><a href="">matches <i class="fa fa-angle-down"></i></a>
+                    <li><a href="" id="matches-link">matches <i class="fa fa-angle-down"></i></a>
                         <div id="sub-menu">
                             <ul>
                                 <li><a href="">matches</a></li>
@@ -202,8 +202,8 @@
                     <li><a href="">shop</a></li>
                     <li><a href="">schedule</a></li>
                     <li><a href="">blog</a></li>
-                    <li><a href="">players <i class="fa fa-angle-down"></i></a>
-                        <div id="sub-menu">
+                    <li><a href="" id="players-link">players <i class="fa fa-angle-down"></i></a>
+                        <div id="sub-menu" class="players-content">
                             <ul>
                                 <li><a href="">players</a></li>
                                 <li><a href="">top players <i class="fa fa-angle-down"></i></a>
@@ -221,6 +221,21 @@
                     <li><a href="">contact</a></li>
                 </ul>
             </div>
+
+            <!-- <div class="menu-container">
+                <div class="menu-header">
+                    <div class="menu-text">
+                        <p>
+                            menu
+                        </p>
+                    </div>
+                    <div class="menu-icon">
+                        <i class="fa fa-times"></i>
+                    </div>
+                </div>
+
+                
+            </div> -->
         </section>
 
 
