landing page image with responsive

--- a/index.html
+++ b/index.html
@@ -279,6 +279,9 @@
 
                 <div id="layer"></div>
             </div>
+
+
+            <div class="landing-page-content"></div>
         </section>
 
 
