upcoming match section with responsive and adding of favicon and modifying shopping containg (width 100% in responsive)

--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SoccerWorld - Professional Soccer and Football Website Template#335635</title>
+    <title>Home - Soccer World HTML Template - Soccer</title>
 
     <link rel="stylesheet" href="/styles/main_style.css">
     <link rel="stylesheet" href="/icons/fontawesome/css/font-awesome.css">
+    <link 
+        rel="icon"
+        title="image/png"
+        href="/logos/favicon2.png"
+    />
 </head>
     <body>
         <section>
@@ -282,6 +287,146 @@
 
 
             <div class="landing-page-content"></div>
+        </section> 
+
+
+
+        <section>
+            <div class="upcoming-match-container">
+                <div class="foot-header-container">
+                    <div class="foot-header">
+                        <p> upcoming match</p>
+                    </div>
+                    <div class="horizontal-line"></div>
+                </div>
+
+                <div class="upcoming-match-content">
+                    <div class="two-upcoming-match">
+                        <div class="teams-container">
+                            <div class="team-text">
+                                <p><b> national olympic</b></p>
+                                <p>June 14, 2023</p>
+                            </div>
+                            <div class="main-teams-container">
+                                <div class="team">
+                                    <div class="team-image">
+                                        <a href="">
+                                            <img src="/images/brash-thugs.png" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="team-image-text">
+                                        <p>istanbul</p>
+                                    </div>
+                                </div>
+
+                                <div class="team">
+                                    <div class="team-image">
+                                        <a href="">
+                                            <img src="/images/cougars.png" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="team-image-text">
+                                        <p>italy</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="teams-container ed2">
+                            <div class="team-text">
+                                <p><b> national olympic</b></p>
+                                <p>June 22, 2023</p>
+                            </div>
+                            <div class="main-teams-container">
+                                <div class="team">
+                                    <div class="team-image">
+                                        <a href="">
+                                            <img src="/images/fumble-this.png" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="team-image-text">
+                                        <p>istanbul</p>
+                                    </div>
+                                </div>
+
+                                <div class="team">
+                                    <div class="team-image">
+                                        <a href="">
+                                            <img src="/images/clubber-langs.png" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="team-image-text">
+                                        <p>italy</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="two-upcoming-match margin-top">
+                        <div class="teams-container">
+                            <div class="team-text">
+                                <p><b> national olympic</b></p>
+                                <p>July 13, 2023</p>
+                            </div>
+                            <div class="main-teams-container">
+                                <div class="team">
+                                    <div class="team-image">
+                                        <a href="">
+                                            <img src="/images/Junior-Mints.png" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="team-image-text">
+                                        <p>istanbul</p>
+                                    </div>
+                                </div>
+
+                                <div class="team">
+                                    <div class="team-image">
+                                        <a href="">
+                                            <img src="/images/cougars.png" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="team-image-text">
+                                        <p>italy</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="teams-container ed4">
+                            <div class="team-text">
+                                <p><b> national olympic</b></p>
+                                <p>July 21, 2023</p>
+                            </div>
+                            <div class="main-teams-container">
+                                <div class="team">
+                                    <div class="team-image">
+                                        <a href="">
+                                            <img src="/images/clubber-langs.png" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="team-image-text">
+                                        <p>istanbul</p>
+                                    </div>
+                                </div>
+
+                                <div class="team">
+                                    <div class="team-image">
+                                        <a href="">
+                                            <img src="/images/fumble-this.png" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="team-image-text">
+                                        <p>italy</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
 
 
