league table & schudule section with responsive

--- a/index.html
+++ b/index.html
@@ -430,6 +430,148 @@
         </section>
 
 
+
+        <section>
+            <div class="league-table-container">
+                <div class="foot-header-container">
+                    <div class="foot-header">
+                        <p>league table & schedule</p>
+                    </div>
+                    <div class="horizontal-line"></div>
+                </div>
+
+                <div class="league-series-table-container">
+                    <div class="series-table">
+                        <div class="series-text">
+                            <p>
+                                series 1
+                            </p>
+                        </div>
+
+                        <div class="series-table-content">
+                            <div class="series-header">
+                                <p>club</p>
+                                <p>w</p>
+                                <p>d</p>
+                                <p>l</p>
+                            </div>
+
+                            <div class="series-content">
+                                <p>fuzzy FZ</p>
+                                <p>13</p>
+                                <p>01</p>
+                                <p>61</p>
+                            </div>
+
+                            <div class="series-content ed">
+                                <p>lyrical LC</p>
+                                <p>11</p>
+                                <p>20</p>
+                                <p>60</p>
+                            </div>
+
+                            <div class="series-content">
+                                <p>kings KG</p>
+                                <p>25</p>
+                                <p>35</p>
+                                <p>65</p>
+                            </div>
+
+                            <div class="series-content ed">
+                                <p>france FC</p>
+                                <p>30</p>
+                                <p>40</p>
+                                <p>62</p>
+                            </div>
+
+                            <div class="series-content">
+                                <p>kings KG</p>
+                                <p>38</p>
+                                <p>43</p>
+                                <p>64</p>
+                            </div>
+
+                            <div class="series-content ed">
+                                <p>france FC</p>
+                                <p>42</p>
+                                <p>52</p>
+                                <p>62</p>
+                            </div>
+
+                            <div class="series-table-end">
+                                <p>Showing 1 to 5 of 5 Entries</p>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="series-table ed">
+                        <div class="series-text">
+                            <p>
+                                series 1
+                            </p>
+                        </div>
+
+                        <div class="series-table-content">
+                            <div class="series-header ed">
+                                <p>date</p>
+                                <p>event</p>
+                                <p>time</p>
+                                <p>venue</p>
+                            </div>
+
+                            <div class="series-content grid">
+                                <p>may 11, 2024</p>
+                                <p>royal RL <span>vs</span> LC</p>
+                                <p>14:00</p>
+                                <p>GST stadium</p>
+                            </div>
+
+                            <div class="series-content ed grid">
+                                <p>may 12, 2024</p>
+                                <p>kings KG <span>vs</span> RL</p>
+                                <p>15:00</p>
+                                <p>GST stadium</p>
+                            </div>
+
+                            <div class="series-content grid">
+                                <p>may 13, 2024</p>
+                                <p>kings KG <span>vs</span> CD</p>
+                                <p>18:00</p>
+                                <p>GST stadium</p>
+                            </div>
+
+                            <div class="series-content ed grid">
+                                <p>may 14, 2024</p>
+                                <p>lyrical LC <span>vs</span> CD</p>
+                                <p>12:00</p>
+                                <p>GST stadium</p>
+                            </div>
+
+                            <div class="series-content grid">
+                                <p>may 16, 2024</p>
+                                <p>kings KG <span>vs</span> LC</p>
+                                <p>13:00</p>
+                                <p>GST stadium</p>
+                            </div>
+
+                            <div class="series-content ed grid">
+                                <p>may 20, 2024</p>
+                                <p>fzzy FZ <span>vs</span> KG</p>
+                                <p>18:00</p>
+                                <p>GST stadium</p>
+                            </div>
+
+                            <div class="series-table-end">
+                                <p>Showing 1 to 5 of 5 Entries</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
         <script src="/scripts/home_script.js"></script>
     </body>
 </html>
