our team store section with responsive (modification of league table % schedule padding-top)

--- a/index.html
+++ b/index.html
@@ -572,6 +572,127 @@
         </section>
 
 
+
+        <section>
+            <div class="out-team-store-container">
+                <div class="foot-header-container">
+                    <div class="foot-header">
+                        <p>our team store</p>
+                    </div>
+                    <div class="horizontal-line"></div>
+                </div>
+
+                <div class="our-team-store-btns-container">
+                    <div class="our-team-link-btns">
+                        <div class="team-btn">
+                            <button class="latest-btn">latest</button>
+                        </div>
+                        <div class="team-btn">
+                            <button class="bestseller-btn">bestseller</button>
+                        </div>
+                    </div>
+                    <div class="our-team-angle-btns">
+                        <div class="angle-btn">
+                            <button class="main-angle-btn"><i class="fa fa-angle-left"></i></button>
+                        </div>
+                        <div class="angle-btn">
+                            <button class="main-angle-btn right"><i class="fa fa-angle-right"></i></button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="our-team-store-content">
+                    <div class="main-content-container">
+                        <div class="team-content">
+                            <img src="/images/Junior-Mints.png" alt="">
+                        </div>
+
+                        <div class="team-content-info">
+                            <div class="team-content-info-header">
+                                <div class="team-content-info-header-text">
+                                    <p>
+                                        hand accessories
+                                    </p>
+                                </div>
+                                <div class="team-content-comments">
+                                    <i class="fa fa-heart"></i>
+                                    <i class="fa fa-user"></i>
+                                </div>
+                            </div>
+
+                            <div class="name-price-content">
+                                <p>
+                                    gloves
+                                </p>
+                                <p>
+                                    $20.00
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="main-content-container ed">
+                        <div class="team-content">
+                            <img src="/images/clubber-langs.png" alt="">
+                        </div>
+
+                        <div class="team-content-info">
+                            <div class="team-content-info-header">
+                                <div class="team-content-info-header-text">
+                                    <p>
+                                        game accessories
+                                    </p>
+                                </div>
+                                <div class="team-content-comments">
+                                    <i class="fa fa-heart"></i>
+                                    <i class="fa fa-user"></i>
+                                </div>
+                            </div>
+
+                            <div class="name-price-content">
+                                <p>
+                                    ball
+                                </p>
+                                <p>
+                                    $25.00
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="main-content-container ed3">
+                        <div class="team-content">
+                            <img src="/images/fumble-this.png" alt="">
+                        </div>
+
+                        <div class="team-content-info">
+                            <div class="team-content-info-header">
+                                <div class="team-content-info-header-text">
+                                    <p>
+                                        playground accessories
+                                    </p>
+                                </div>
+                                <div class="team-content-comments">
+                                    <i class="fa fa-heart"></i>
+                                    <i class="fa fa-user"></i>
+                                </div>
+                            </div>
+
+                            <div class="name-price-content">
+                                <p>
+                                    grass
+                                </p>
+                                <p>
+                                    $70.00
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
         <script src="/scripts/home_script.js"></script>
     </body>
 </html>
