put real images in our team store section

--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
                 <div class="our-team-store-content">
                     <div class="main-content-container">
                         <div class="team-content">
-                            <img src="/images/Junior-Mints.png" alt="">
+                            <img src="/images/gloves.png" alt="">
                         </div>
 
                         <div class="team-content-info">
@@ -633,7 +633,7 @@
 
                     <div class="main-content-container ed">
                         <div class="team-content">
-                            <img src="/images/clubber-langs.png" alt="">
+                            <img src="/images/ball.png" alt="">
                         </div>
 
                         <div class="team-content-info">
@@ -662,7 +662,7 @@
 
                     <div class="main-content-container ed3">
                         <div class="team-content">
-                            <img src="/images/fumble-this.png" alt="">
+                            <img src="/images/playground.png" alt="">
                         </div>
 
                         <div class="team-content-info">
