best in class gaming experience section with responsive

--- a/index.html
+++ b/index.html
@@ -621,8 +621,8 @@
                             </div>
 
                             <div class="name-price-content">
-                                <p>
-                                    gloves
+                                <p class="team-game">
+                                    <a href=""> gloves</a>
                                 </p>
                                 <p>
                                     $20.00
@@ -650,8 +650,8 @@
                             </div>
 
                             <div class="name-price-content">
-                                <p>
-                                    ball
+                                <p class="team-game">
+                                    <a href=""> ball</a>
                                 </p>
                                 <p>
                                     $25.00
@@ -679,11 +679,101 @@
                             </div>
 
                             <div class="name-price-content">
-                                <p>
-                                    grass
+                                <p class="team-game">
+                                    <a href="">grass</a>
                                 </p>
                                 <p>
                                     $70.00
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+
+
+        <section>
+            <div class="best-in-class-container">
+                <div class="foot-header-container">
+                    <div class="foot-header fh1">
+                        <p>best-in-class gaming</p>
+                        <p>experience</p>
+                    </div>
+                    <div class="horizontal-line"></div>
+                </div>
+
+                <div class="best-in-class-sub-header">
+                    <p>
+                        Trusted by 1 millions players
+                    </p>
+                </div>
+
+                <div class="best-in-class-content">
+                    <div class="two-best-in-class">
+                        <div class="trophy-container">
+                            <div class="trophy-image">
+                                <img src="/images/group.png" alt="">
+                            </div>
+                            <div class="trophy-value">
+                                <p>
+                                    1000+
+                                </p>
+                            </div>
+                            <div class="trophy-user">
+                                <p>
+                                    Active Users
+                                </p>
+                            </div>
+                        </div>
+                        <div class="trophy-container ed2">
+                            <div class="trophy-image">
+                                <img src="/images/gift.png" alt="">
+                            </div>
+                            <div class="trophy-value">
+                                <p>
+                                    1500+
+                                </p>
+                            </div>
+                            <div class="trophy-user">
+                                <p>
+                                    Prize in Total
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="two-best-in-class tbic2">
+                        <div class="trophy-container">
+                            <div class="trophy-image">
+                                <img src="/images/medal.png" alt="">
+                            </div>
+                            <div class="trophy-value">
+                                <p>
+                                    100+
+                                </p>
+                            </div>
+                            <div class="trophy-user">
+                                <p>
+                                    Daily Contests
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="trophy-container ed4">
+                            <div class="trophy-image">
+                                <img src="/images/trophy.png" alt="">
+                            </div>
+                            <div class="trophy-value">
+                                <p>
+                                    3500+
+                                </p>
+                            </div>
+                            <div class="trophy-user">
+                                <p>
+                                    Lucky Winners
                                 </p>
                             </div>
                         </div>
