good goals section with responsive

--- a/index.html
+++ b/index.html
@@ -778,6 +778,30 @@
                             </div>
                         </div>
                     </div>
+                </div> 
+
+                <div class="good-goals-container">
+                    <div class="good-goals-image">
+                        <img src="/images/ban-1.png" alt="">
+                    </div>
+
+                    <div class="good-goals-info">
+                        <div class="good-goals-header">
+                            <p>
+                                it is good to have goals
+                            </p>
+                        </div>
+                        <div class="good-goals-text">
+                            <p>
+                                Ac feugiat sed lectus vestibulum 
+                                mattis ullamcorper. Ultrices 
+                                tincidunt arcu non sodales neque.
+                            </p>
+                        </div>
+                        <div class="primary-btn">
+                            <abbr title="contact-us"><a href="">contact now</a></abbr>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
